Добавить удаление фильмов и юзеров по id